# Projet_RAG_FAQ

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
benchmark/: data_access.py  evaluate_answers.py  evaluate_results.py  methods_runners.py  run_evaluation_script.py
data/: benchmark_results_20260209_102911.json  evaluation_report.csv  evaluation_results.csv  extractive-qa-eval.csv  extractive-qa-with-answers.csv  faq-base.json  golden-set.json  llm-eval.csv  llm-only-eval.csv  llm-only-with-answers.csv  methods_scores_summary.csv  rag-eval.csv  rag-with-answers.csv
doc/: BRIEF_PROJET.md  NOTE_CADRAGE.md  RAPPORT_BENCHMARK.md  RAPPORT_VEILLE_TECHNIQUE.md
grafana/dashboards/: dashboard_api_rag_faq.json
notebooks/: data_explorer.py  test_sentence_transformers.py
src/: main.py  models.py  routes.py
src/api/middleware/: logging_middleware.py
src/config/: logging_config.py
src/routes/: api_router.py  metrics.py
src/services/: data_loader.py  rag_service.py
tests/: conftest.py
tests/e2e/: test_api_e2e.py
tests/functional/: test_rag_functional.py
tests/unit/: test_data_loader.py  test_main.py  test_rag_service.py  test_routes.py
