[project]
name = "projet-rag-faq"
version = "0.1.0"
description = "Projet of an intelligent assistant to anwser citizens questions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.9.0",
    "marimo>=0.19.2",
    "pandas>=2.3.3",
    "sentence-transformers>=5.2.0",
]
